<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainviewmodel"
            type="com.williammunsch.ironbody.ui.main.MainViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.WorkoutFragment">

        <LinearLayout
            android:id="@+id/lifting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="@{mainviewmodel.codename, default=gone}"
            app:layout_constraintBottom_toTopOf="@id/cardio_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/lifting_workout" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="@{() -> mainviewmodel.startNewWorkout()}"
                android:text="@string/lift"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardio_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="@{mainviewmodel.codename, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardio_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/cardio_workout" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="@{() -> mainviewmodel.startNewCardio()}"
                android:text="@string/Run"/>
        </LinearLayout>

        <ScrollView
            android:id="@+id/workout_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lift_buttons_layout"
            app:layout_constraintTop_toTopOf="parent">

        </ScrollView>

        <LinearLayout
            android:id="@+id/lift_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:visibility="@{mainviewmodel.workoutButtonLayoutVisibility, default=gone}"
            app:layout_constraintBottom_toTopOf="@id/two_botton_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_bench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:text="BenchP"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_overhead"/>
                <Button
                    android:id="@+id/button_overhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:text="OHP"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_squat"
                    app:layout_constraintStart_toEndOf="@id/button_bench"
                    />
                <Button
                    android:id="@+id/button_squat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:text="Squat"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_overhead"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_deadlift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:text="Deadlift"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_chinup"/>
                <Button
                    android:id="@+id/button_chinup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:text="Chin-up"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_deadlift"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/two_botton_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/new_lift_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Lift"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:visibility="@{mainviewmodel.liftButtonVisibility, default=gone}"
                android:onClick="@{() -> mainviewmodel.addLift()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/finish_button"
                />
            <Button
                android:id="@+id/finish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Finish"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:visibility="@{mainviewmodel.liftButtonVisibility, default=gone}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/new_lift_button"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>